# SafePredict

./: .gitignore  CMakeLists.txt  README.md  SafePredict.c
config/: lwipopts.h  main_config.h  mbedtls_config.h  oledconfig.h
libs/pico-ssd1306/: CMakeLists.txt
libs/pico_buzzer/: CMakeLists.txt  buzzer.c  buzzer.h
libs/pico_http_request/: CMakeLists.txt  http_request.c  http_request.h
libs/pico_mpu6050/: CMakeLists.txt  mpu6050.c  mpu6050.h
libs/pico_rgb_digital/: CMakeLists.txt  rgb_digital.c  rgb_digital.h
libs/pico_sr04/: CMakeLists.txt  distance_sr04.c  distance_sr04.h
libs/pico_wifi_manager/: CMakeLists.txt  wifi_manager.c  wifi_manager.h
